css/main.css
#signIn {
    width: 100%;
    height: 100%;
    background: #fff;
    padding-top: 80px;
}

#signIn form {
    width: 260px;
    height: 170px;
    position: absolute;
    top: 50%; left: 50%;
    margin-top: -85px;
    margin-left: -150px;
}

#signIn form small {
    display: block;
    text-align: center;
    margin-top: 20px;
}

#signIn .signup {
    position:  absolute;
    bottom: 20px; left: 20px;
}

#signIn .checkbox {
    position:  absolute;
    bottom: 20px; right: 20px;
}

#application {
    width: 100%;
    height: 100%;
    background: #fff;
}

